--- a/pytriqs/operators/util/CMakeLists.txt
+++ b/pytriqs/operators/util/CMakeLists.txt
@@ -7,7 +7,7 @@ SET(PYTHON_SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/U_matrix.py
 )
 
-triqs_python_extension(extractors operators/util)
-add_dependencies(python_wrap_extractors python_wrap_operators)
+triqs_python_extension(extractors)
+add_dependencies(extractors operators)
 
 install (FILES ${PYTHON_SOURCES} DESTINATION ${TRIQS_PYTHON_LIB_DEST}/operators/util)
