--- a/triqs/CMakeLists.txt
+++ b/triqs/CMakeLists.txt
@@ -25,15 +25,8 @@ SET(LINK_RT "")
 else()
 SET(LINK_RT "-lrt")
 endif()
-add_library(triqs ${ALLSOURCES} ${all_py_converters_sources})
+add_library(triqs ${ALLSOURCES})
 target_link_libraries (triqs ${LINK_RT} ${TRIQS_LINK_LIBS})
-
-# The TRIQS library depends on the generation of the .cpp wrapper and converters files
-# which are produced first.
-get_property(all_py_converters_targets GLOBAL PROPERTY TRIQS_PY_CONVERTERS_TARGETS)
-foreach(T ${all_py_converters_targets})
- add_dependencies(triqs ${T})
-endforeach()
 
 # Install library
 install(TARGETS triqs DESTINATION lib)
