--- a/pytriqs/operators/CMakeLists.txt
+++ b/pytriqs/operators/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(PYTHON_SOURCES
 
 install (FILES ${PYTHON_SOURCES} DESTINATION ${TRIQS_PYTHON_LIB_DEST}/operators)
 
-triqs_python_extension(operators operators)
+triqs_python_extension(operators)
 
 # All subdirs
 add_all_subdirectories_with_cmakelist()
