--- a/pytriqs/statistics/CMakeLists.txt
+++ b/pytriqs/statistics/CMakeLists.txt
@@ -5,4 +5,4 @@ SET(PYTHON_SOURCES
 
 install (FILES ${PYTHON_SOURCES} DESTINATION ${TRIQS_PYTHON_LIB_DEST}/statistics)
 
-triqs_python_extension(histograms statistics)
+triqs_python_extension(histograms)
