--- a/test/pytriqs/wrap_test/CMakeLists.txt
+++ b/test/pytriqs/wrap_test/CMakeLists.txt
@@ -6,10 +6,12 @@ triqs_python_extension(test_g)
 triqs_python_extension(test_bl)
 triqs_python_extension(test_multivar)
 
-add_dependencies(python_wrap_test_multivar python_wrap_meshes)
+add_dependencies(test_multivar meshes singularities gf_fnt wrapped_aux)
+add_dependencies(test_g meshes singularities gf_fnt wrapped_aux)
+add_dependencies(test_bl meshes singularities gf_fnt wrapped_aux)
 
-# the module B must be generated AFTER my_module since it uses some wrapped types...
-add_dependencies(python_wrap_my_moduleB python_wrap_my_module)
+add_dependencies(my_moduleB my_module)
+
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 
 # A sample test with text output
@@ -18,5 +20,4 @@ add_python_test(wrap_B)
 add_python_test(wrap_g)
 add_python_test(wrap_multivar)
 add_python_test(blockgf)
-
 
