[cpp2py] Version 2 of clang_parser
STILL WIP

-
Partial rewrite of the parsing part.
I now use directly the libclang AST,
suppressing the intermediate representation that used in version 1.
Code is shorter, simpler in some cases, more standard.

- introduce a small config.py for Cmake configured var
Will simplify using cpp2doc for triqs doc building
(remove a circular loop : need to install to compile the doc !)

- can now run from the build, not only installed.

- kept v1 of tools along it.

- Fix : bug workaround no longer needed on clang 4 (and now leads to
  error).

-

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -10,28 +10,30 @@ add_custom_target(tools_copy ALL DEPENDS ${tools_copy_tar})
 
 # list all files to be installed...
 
+#install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/c++2py.py                  DESTINATION  share/triqs/cpp2py)
+#install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/c++2py_v2.py               DESTINATION  share/triqs/cpp2py)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/util.py                    DESTINATION  share/triqs/cpp2py)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/__init__.py                DESTINATION  share/triqs/cpp2py)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/wrap_generator.py          DESTINATION  share/triqs/cpp2py)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/mako/xxx_wrap.cpp          DESTINATION  share/triqs/cpp2py/mako)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/mako/xxx_desc.py           DESTINATION  share/triqs/cpp2py/mako)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/mako/desc.py           DESTINATION  share/triqs/cpp2py/mako)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/mako/converters.hxx        DESTINATION  share/triqs/cpp2py/mako)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/mako/parameters.rst        DESTINATION  share/triqs/cpp2py/mako)
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2doc/mako/xxx_doc_function.rst  DESTINATION  share/triqs/cpp2doc/mako)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2doc/mako/xxx_doc_class.rst     DESTINATION  share/triqs/cpp2doc/mako)
 
-# temporary fix for brew formula before repackaging
-#install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2doc/mako/cpp2doc_tools.py      DESTINATION  bin)
-#install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/clang_parser.py            DESTINATION  bin)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cpp2doc/mako/cpp2doc_tools.py      DESTINATION  bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/clang_parser.py            DESTINATION  bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/clang_parser2.py            DESTINATION  bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
 
 # The desc_file generator from libclang ...
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cpp2py/c++2py.py.in ${CMAKE_CURRENT_BINARY_DIR}/c++2py.py @ONLY)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cpp2doc/c++2doc.py.in ${CMAKE_CURRENT_BINARY_DIR}/c++2doc.py @ONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.py.in ${CMAKE_CURRENT_BINARY_DIR}/config.py @ONLY)
 
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/c++2py.py  DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/c++2doc.py  DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/config.py  DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cpp2py/c++2py.py  DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cpp2py/c++2py_v2.py  DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cpp2doc/c++2doc.py  DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
 
 
